refactor: improve JWT authentication filter and enhance CORS configuration